--- a/mentor.html
+++ b/mentor.html
@@ -4,19 +4,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset = "utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src = "js/mentor.js"></script>
-        <title>Hello Mentors Login</title>
+        <link href = "css/mentor.css" rel = "stylesheet"></style>
+        <title>Mentor</title>
     </head>
     <body>
-        <h1>Login</h1>
-            <form>
-                <p>Username: </p> <input type = "text" name = "username">
-                <p>Password: </p> <input type = "password" name = "password">
-            </br>
-                <input type="submit" value = "Login">
-            </form>
+        <h1 class = "top">Open Tickets</h1>
+        <div class = "tickets">
+            <table class = "ticketTable" width = "90%">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Problem Description</th>
+                        <th>Location</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+        
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src = "js/mentor.js"></script>
     </body>
 </html>
