changed submit button on hacker page

--- a/hacker.html
+++ b/hacker.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div class = "col-md-12">
-                                <input type = "submit" class = "btn btn-submit" onclick = "submitQuery()">
+                                <input type = "submit" value = "Submit" class = "btn btn-submit" onclick = "submitQuery()">
                             </div>
                         </div>
                     </div>
