--- a/organizer.html
+++ b/organizer.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class = "row">
                             <div class = "col-md-12">
-                                <input type = "submit" class = "btn btn-submit" onclick = "submitQuery()">
+                                <input type = "submit" value="Submit" class = "btn btn-submit" onclick = "submitQuery()">
                             </div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         </div>
                         <div class = "row">
                             <div class = "col-md-12">
-                                <input type = "submit" class = "btn btn-submit" onclick = "submitQuery()">
+                                <input type = "submit" value = "Submit" class = "btn btn-submit" onclick = "submitQuery()">
                             </div>
                         </div>
                     </div>
