--- a/login.html
+++ b/login.html
@@ -16,14 +16,14 @@
     					<h3>Sign In</h3>
     				</div>
     				<div class="card-body">
-    					<form>
+    					<form method="POST">
     						<div class="input-group form-group">
     							<div class="input-group-prepend">
     								<span class="input-group-text">
     									<i class="fas fa-user"></i>
     								</span>
     							</div>
-    							<input type="text" class="form-control" placeholder="username">
+    							<input type="text" class="form-control" placeholder="username" name="username">
     						</div>
     						<div class="input-group form-group">
     							<div class="input-group-prepend">
@@ -31,7 +31,7 @@
 										<i class="fas fa-key"></i>
     								</span>
     							</div>
-    							<input type="password" class="form-control" placeholder="password">
+    							<input type="password" class="form-control" placeholder="password" name="password">
     						</div>
     						<div class="row align-items-center remember-checkbox-text-color remember-checkbox-size">
     							<input type="checkbox" name="RememberAccount" value="Remember"> Remember Me <br>
