--- a/mentor.html
+++ b/mentor.html
@@ -5,6 +5,8 @@
         <meta charset = "utf-8">
         <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
         <link href = "css/mentor.css" rel = "stylesheet"></style>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Mentor</title>
     </head>
     <body>
