updated some files

--- a/hacker.html
+++ b/hacker.html
@@ -23,8 +23,8 @@
                         <div class = "row">
                             <div class = "col">
                                 <div class = "form-group">
-                                    <label for = "name">Name</label>
-                                    <input id = "name" type = "text" class = "form-control" required = "required" data-error="Please enter your name">
+                                    <label for = "id">Name</label>
+                                    <input id = "id" type = "text" class = "form-control" required = "required" data-error="Please enter your name">
                                 </div>
                             </div>
                         </div>
