--- a/mentor.html
+++ b/mentor.html
@@ -18,6 +18,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">Problem Description</th>
                         <th scope="col">Location</th>
+                        <th scope="col">Tags</th>
                         <th scope="col">Status</th>
                     </tr>
                 </thead>
