--- a/hacker.html
+++ b/hacker.html
@@ -9,9 +9,6 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Hacker</title>
         <script>
-            function submitQuery() {
-                alert("question submitted");
-            }
         </script>
     </head>
     <body>
@@ -23,36 +20,34 @@
                         <div class = "row">
                             <div class = "col">
                                 <div class = "form-group">
-                                    <label for = "id">Name</label>
-                                    <input id = "id" type = "text" class = "form-control" required = "required" data-error="Please enter your name">
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "row">
-                            <div class = "col">
-                                <div class = "form-group">
                                     <label for = "location">Location</label>
-                                    <input id = "location" type = "text" class = "form-control" required = "required" data-error="Please enter your location">
+                                    <input name = "location" type = "text" class = "form-control" required = "required" data-error="Please enter your location">
                                 </div>
                             </div>
                         </div>
                         <div class = "row">
                             <div class = "col">
                                 <div class = "form-group">
-                                    <label for = "contact">Contact</label>
-                                    <input id = "contact" type = "text" class = "form-control" required = "required" data-error="Please enter your contact info">
+                                    <label for = "tags">Topic</label>
+                                    <select name = "tags" class = "form-control" required = "required" data-error="Please select a topic">
+                                        <option value = "ANDROID">Android</option>
+                                        <option value="iOS">iOS</option>
+                                        <option value = "JAVA">Java</option>
+                                        <option value = "JAVASCRIPT">Javascript</option>
+                                    </select>
+                                    <!--<input name = "tags" type = "text" class = "form-control" required = "required" data-error="Please enter your contact info">-->
                                 </div>
                             </div>
                         </div>
                         <div class = "row">
                             <div class = "col-md-12">
                                 <div class = "form-group">
-                                    <label for = "problem">Briefly explain your problem</label>
-                                    <textarea id = "problem" name = "problem" class = "form-control" rows = "4" required = "required" data-error="Please enter your question"></textarea>
+                                    <label for = "message">Briefly explain your problem</label>
+                                    <textarea id = "message" name = "message" class = "form-control" rows = "4" required = "required" data-error="Please enter your question"></textarea>
                                 </div>
                             </div>
                             <div class = "col-md-12">
-                                <input type = "submit" value = "Submit" class = "btn btn-submit" onclick = "submitQuery()">
+                                <input type = "submit" value = "Submit" class = "btn btn-submit">
                             </div>
                         </div>
                     </div>
@@ -110,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src = "js/hacker.js"></script>
