--- a/organizer.html
+++ b/organizer.html
@@ -109,19 +109,21 @@
                 <div class="col">
                     <div class = "container-fluid">
                         <div class = "table-responsive">
-                            <table class = "table-striped">
+                            <table class = "table-striped" id="all-tickets">
                                 <caption>All Tickets</caption>
                                 <thead>
                                     <tr>
-                                        <th>Problem</th>
-                                        <th>Time Opened</th>
+                                        <th scope="col">Ticket ID</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Problem Description</th>
+                                        <th scope="col">Location</th>
+                                        <th scope="col">Tags</th>
+                                        <th scope="col">Time Submitted</th>
+                                        <th scope="col">Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>Shit Broke</td>
-                                        <td>All the time</td>
-                                    </tr>
+
                                 </tbody>
                             </table>
                         </div>
@@ -129,9 +131,9 @@
                 </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src = "js/hacker.js"></script>
+        <script src = "js/organizer.js"></script>
     </body>
 </html>
