used the external css again on two more pages

--- a/organizer.html
+++ b/organizer.html
@@ -81,10 +81,9 @@
 
         <div class="container-fluid">
             <div class= "row"> 
-                <div class="col">
                     <div class = "container-fluid">
                         <div class = "table-responsive">
-                            <table class = "table-striped">
+                            <table>
                                 <caption>Current Mentors</caption>
                                 <thead>
                                     <tr>
@@ -105,11 +104,9 @@
                             </table>
                         </div>
                     </div>
-                </div>
-                <div class="col">
                     <div class = "container-fluid">
                         <div class = "table-responsive">
-                            <table class = "table-striped" id="all-tickets">
+                            <table id="all-tickets">
                                 <caption>All Tickets</caption>
                                 <thead>
                                     <tr>
@@ -128,7 +125,6 @@
                             </table>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
         <script src="http://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
