hacker table shows their active tickets

--- a/hacker.html
+++ b/hacker.html
@@ -100,13 +100,13 @@
                     </div>
                     <div class = "container-fluid">
                         <div class = "table-responsive">
-                            <table>
+                            <table id = "hacker-tickets">
                                 <caption>Your Tickets</caption>
                                 <thead>
                                     <tr>
                                         <th>Problem</th>
-                                        <th>Time Opened</th>
                                         <th>Tags</th>
+                                        <th>Time Submitted</th>
                                     </tr>
                                 </thead>
                                 <tbody>
