api call to get a mentors tickets

--- a/mentor.html
+++ b/mentor.html
@@ -59,7 +59,8 @@
                         <th scope="col">Location</th>
                         <th scope="col">Tags</th>
                         <th scope="col">Time Submitted</th>
-                        <th scope="col">Status</th>
+                        <th scope="col">Release</th>
+                        <th scope="col">Close</th>
                     </tr>
                 </thead>
                 <tbody>
