Current Mentors Updated for frontend

--- a/hacker.html
+++ b/hacker.html
@@ -77,23 +77,17 @@
             <div class= "row"> 
                     <div class = "container-fluid">
                         <div class = "table-responsive">
-                            <table>
+                            <table id="current-mentors">
                                 <caption>Current Mentors</caption>
                                 <thead>
                                     <tr>
                                         <th>Name</th>
                                         <th>Skills</th>
                                         <th>Status</th>
-                                        <th>End Time</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td data-label= "Name">Chris Rosenblatt</td>
-                                        <td data-label="Skills">None</td>
-                                        <td data-label="Status">Still alive but Im barely breathing</td>
-                                        <td data-label="End Time">Never</td>
-                                    </tr>
+
                                 </tbody>
                             </table>
                         </div>
