--- a/organizer.html
+++ b/organizer.html
@@ -78,23 +78,20 @@
             <div class= "row"> 
                     <div class = "container-fluid">
                         <div class = "table-responsive">
-                            <table>
+                            <table id="current-mentors">
                                 <caption>Current Mentors</caption>
                                 <thead>
                                     <tr>
-                                        <th>Name</th>
-                                        <th>Skills</th>
-                                        <th>Status</th>
-                                        <th>End Time</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Email</th>
+                                        <th scope="col">Skills</th>
+                                        <th scope="col">Status</th>
+                                        <th scope="col">Start Time</th>
+                                        <th scope="col">Elapsed Time</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>Chris Rosenblatt</td>
-                                        <td>None</td>
-                                        <td>Still alive but Im barely breathing</td>
-                                        <td>Never</td>
-                                    </tr>
+
                                 </tbody>
                             </table>
                         </div>
