hackers can see the status of their tickets

--- a/hacker.html
+++ b/hacker.html
@@ -101,6 +101,7 @@
                                         <th>Problem</th>
                                         <th>Tags</th>
                                         <th>Time Submitted</th>
+                                        <th>Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -108,6 +109,7 @@
                                         <td data-label="Problem">Shit Broke</td>
                                         <td data-label="Tags">ANDROID</td>
                                         <td data-label="Time Submitted">All the time</td>
+                                        <td data-label="Status">Open</td>
                                     </tr>
                                 </tbody>
                             </table>
