added navbar links to add hackers and mentors

--- a/organizer.html
+++ b/organizer.html
@@ -22,6 +22,12 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "/add-hacker">Add a Hacker</a>
+                </li>
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "/add-mentor">Add a Mentor</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
