--- a/add-hacker.html
+++ b/add-hacker.html
@@ -23,6 +23,9 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
+                <li class = "nav-item">
+                        <a class = "nav-link" href = "/organizer">Back</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
