added page to request a password change

--- a/login.html
+++ b/login.html
@@ -38,7 +38,8 @@
     						<div class="form-group">
     							<input type="submit" value="Login" class="btn float-right login_btn">
     						</div>
-    					</form>
+							</form>
+							<a href = "/forgot-password" class = "card-link" style = "color: aliceblue">Forgot Password?</a>
     				</div>
     			</div>
     		</div>
