--- a/change-password.html
+++ b/change-password.html
@@ -4,10 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset = "utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href = "css/forgot-password.css" rel = "stylesheet"></style>
+        <link href = "css/change-password.css" rel = "stylesheet"></style>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <title>Forgot Password</title>
+        <title>Change Password</title>
         <script>
         </script>
     </head>
@@ -31,15 +31,23 @@
             </div> 
         </nav>
         <div class = "container-fluid">
-            <form id = "email-form">
+            <form id = "new-pw-form">
                 <fieldset>
-                    <legend>Request Password Change</legend>
+                    <legend>Create New Password</legend>
                     <div class = "controls">
                         <div class = "row">
                             <div class="col">
                                 <div class = "form-group">
-                                    <label for = "email">Email</label>
-                                    <input name = "email" type = "email" class = "form-control" required = "required" data-error="Please enter your email">
+                                    <label for = "password">Type New Password</label>
+                                    <input name = "password" id = "password" type = "password" class = "form-control" required = "required" data-error="Please enter password">
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "row">
+                            <div class="col">
+                                <div class = "form-group">
+                                    <label for = "confirm-password">Confirm Password</label>
+                                    <input name = "confirm-password" id = "confirm-password" type = "password" class = "form-control" required = "required" data-error="Please enter password">
                                 </div>
                             </div>
                         </div>
@@ -55,6 +63,6 @@
         <script src="http://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src = "js/forgot-password.js"></script>
+        <script src = "js/change-password.js"></script>
     </body>
 </html>
