request password change page

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -39,7 +39,7 @@
                             <div class="col">
                                 <div class = "form-group">
                                     <label for = "email">Email</label>
-                                    <input name = "email" type = "email" class = "form-control" required = "required" data-error="Please enter your email">
+                                    <input name = "email" type = "text" class = "form-control" required = "required" data-error="Please enter your email">
                                 </div>
                             </div>
                         </div>
