--- a/reset-password.html
+++ b/reset-password.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset = "utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href = "css/change-password.css" rel = "stylesheet"></style>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -30,35 +31,37 @@
                     </ul>
             </div> 
         </nav>
-        <div class = "container-fluid">
-            <form id = "new-pw-form">
-                <fieldset>
-                    <legend>Create New Password</legend>
-                    <div class = "controls">
-                        <div class = "row">
-                            <div class="col">
-                                <div class = "form-group">
-                                    <label for = "password">Type New Password</label>
-                                    <input name = "password" id = "password" type = "password" class = "form-control" required = "required" data-error="Please enter password">
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "row">
-                            <div class="col">
-                                <div class = "form-group">
-                                    <label for = "confirm-password">Confirm Password</label>
-                                    <input name = "confirm-password" id = "confirm-password" type = "password" class = "form-control" required = "required" data-error="Please enter password">
-                                </div>
-                            </div>
-                        </div>
-                        <div class = "row">
-                            <div class = "col-md-12">
-                                <input type = "submit" value = "Submit" class = "btn btn-submit">
-                            </div>
-                        </div>
+        <div class = "container">
+            <div class="d-flex justify-content-center h-100">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Create New Password</h3>
                     </div>
-                </fieldset>
-            </form>
+                    <div class="card-body">
+                        <form id = "new-pw-form">
+                            <div class="input-group form-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-key"></i>
+                                    </span>
+                                </div>
+                                <input name = "password" id = "password" type = "password" class = "form-control" placeholder="New Password" required = "required" data-error="Please enter password">
+                            </div>
+                            <div class="input-group form-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-key"></i>
+                                    </span>
+                                </div>
+                                <input name = "confirm-password" id = "confirm-password" type = "password" class = "form-control" placeholder="Confirm Password" required = "required" data-error="Please confirm password">
+                            </div>
+                            <div class="form-group">
+                                <input type = "submit" value = "Submit" class = "btn float-right btn-submit">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="http://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
