wording changes entirely unrelated to changing password

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     									<i class="fas fa-user"></i>
     								</span>
     							</div>
-    							<input type="text" class="form-control" placeholder="username" name="username">
+    							<input type="text" class="form-control" placeholder="email" name="username">
     						</div>
     						<div class="input-group form-group">
     							<div class="input-group-prepend">
