--- a/add-hacker.html
+++ b/add-hacker.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class = "row">
                             <div class = "col-md-12">
-                                    <input type = "submit" value="Submit" class = "btn btn-submit">
+                                    <input type = "submit" value="Submit" class = "btn float-right btn-submit">
                             </div>
                         </div>
                     </div>
@@ -61,5 +61,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src = "js/add-hacker.js"></script>
     </body>
 </html> 
