--- a/add-mentor.html
+++ b/add-mentor.html
@@ -52,7 +52,7 @@
                         <div class = "row">
                             <div class = "col">
                                     <label for = "skills">Skills</label>
-                                    <select name = "tags" class = "form-control" required = "required" data-error="Please select a skill" multiple>
+                                    <select id= "tags" name = "tags" class = "form-control" required = "required" data-error="Please select a skill" multiple>
                                         <option value = "ANDROID">Android</option>
                                         <option value="iOS">iOS</option>
                                         <option value = "JAVA">Java</option>
@@ -62,7 +62,7 @@
                         </div>
                         <div class = "row">
                             <div class = "col-md-12">
-                                    <input type = "submit" value="Submit" class = "btn btn-submit">
+                                    <input type = "submit" value="Submit" class = "btn float-right btn-submit">
                             </div>
                         </div>
                     </div>
@@ -72,5 +72,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src = "js/add-mentor.js"></script>
     </body>
 </html>
