more typo fixes

--- a/hacker.html
+++ b/hacker.html
@@ -82,6 +82,7 @@
                             <th>Tags</th>
                             <th>Time Submitted</th>
                             <th>Status</th>
+                            <th>Mentor</th>
                         </tr>
                     </thead>
                     <tbody>
